--- a/app/src/main/res/layout/fragment_customize.xml
+++ b/app/src/main/res/layout/fragment_customize.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     android:background="#F2F2F2"
 >
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/custom_add_button"
+    <ImageView
+        android:id="@+id/icon_cutomize_app_addbutton"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:src="@drawable/icon_plus_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="70dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:srcCompat="@drawable/fab_add"
+
         />
 
 </android.support.constraint.ConstraintLayout>
