--- a/app/src/main/res/layout/activity_resight_main.xml
+++ b/app/src/main/res/layout/activity_resight_main.xml
@@ -9,18 +9,55 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="56dp"
         android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
-        <ImageView
-            android:id="@+id/tv_header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_logo"
-            />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/tv_header_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_logo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                />
+
+            <ImageView
+                android:id="@+id/sensor_mini_icon"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/icon_mini_sensor"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/hand_mini_icon"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                />
+
+            <ImageView
+                android:id="@+id/hand_mini_icon"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/icon_mini_hand"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                />
+
+        </android.support.constraint.ConstraintLayout>
+
 
     </android.support.v7.widget.Toolbar>
 
